--- a/CompanyManagement.Infrastructure/CompanyManagement.Infrastructure.csproj
+++ b/CompanyManagement.Infrastructure/CompanyManagement.Infrastructure.csproj
@@ -20,4 +20,8 @@
     <ProjectReference Include="..\CompanyManagement.Domain\CompanyManagement.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
